--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,8 +10,156 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.remignton.laura.calculatorapp.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="6"
+        android:columnCount="4"
+        android:orientation="horizontal">
+
+
+        <EditText
+            android:layout_columnSpan="3"
+            android:id="@+id/editTextCalc"
+            android:layout_width="268dp"
+            android:layout_height="70dp"
+            android:editable="false"
+            android:ems="10"
+            android:textSize="35dp"
+            android:gravity="right"/>
+
+        <Button
+            android:id="@+id/btn_Clear"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill"
+            android:text="C"
+            android:textSize="40dp" />
+
+
+        <Button
+            android:id="@+id/btn_One"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="1"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Two"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="2"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Three"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="3"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Div"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_rowSpan="2"
+            android:text="/"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Four"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="4"
+            android:textSize="50dp" />
+
+
+        <Button
+            android:id="@+id/btn_Five"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="5"
+            android:textSize="50dp" />
+
+
+        <Button
+            android:id="@+id/btn_Six"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="6"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Mult"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_rowSpan="2"
+            android:text="*"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Seven"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="7"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Eigth"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="8"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Nine"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="2"
+            android:text="9"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Rest"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill"
+            android:layout_rowSpan="2"
+            android:text="-"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Cero"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill"
+            android:layout_rowSpan="1"
+            android:text="0"
+            android:textSize="50dp" />
+
+
+        <Button
+            android:id="@+id/btn_CeroCero"
+            android:layout_gravity="fill_vertical"
+            android:layout_rowSpan="1"
+            android:text="00"
+            android:textSize="50dp" />
+
+        <Button
+            android:id="@+id/btn_Sum"
+            android:layout_width="wrap_content"
+            android:layout_height="175dp"
+            android:layout_gravity="fill_horizontal"
+            android:layout_rowSpan="3"
+            android:text="+"
+            android:textSize="50dp"
+            />
+
+        <Button
+            android:id="@+id/btn_equals"
+            android:layout_height="87.5dp"
+            android:layout_columnSpan="3"
+            android:layout_gravity="fill_horizontal"
+            android:layout_rowSpan="2"
+            android:text="="
+            android:textSize="50dp" />
+
+
+    </GridLayout>
+</LinearLayout>
